src/main/java/com/example/kdtbe5_miniproject/_core/errors/exception/UnCorrectPasswordException.java
package com.example.kdtbe5_miniproject._core.errors.exception;

public class UnCorrectPasswordException extends RuntimeException{

    public UnCorrectPasswordException(String message) {
        super(message);
    }
}
